deploy: da80d8cb4a766e14f5fbfa16ff5ea072cb81f13d

--- a/ovningar/Undersok_funktion.html
+++ b/ovningar/Undersok_funktion.html
@@ -51,7 +51,7 @@
     <script async="async" src="../_static/sphinx-thebe.js"></script>
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">MathJax.Hub.Config({"tex2jax": {"inlineMath": [["\\(", "\\)"]], "displayMath": [["\\[", "\\]"]], "processRefs": false, "processEnvironments": false}})</script>
-    <link rel="canonical" href="https://opendata-education.github.io/Matematiikka/intro.html/ovningar/Undersok_funktion.html" />
+    <link rel="canonical" href="https://opendata-education.github.io/se_Matematik/intro.html/ovningar/Undersok_funktion.html" />
     <link rel="shortcut icon" href="../_static/logo.png"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
@@ -175,11 +175,11 @@
         aria-label="Connect with source repository"><i class="fab fa-github"></i></button>
     <div class="dropdown-buttons sourcebuttons">
         <a class="repository-button"
-            href="https://github.com/opendata-education/Matematiikka"><button type="button" class="btn btn-secondary topbarbtn"
+            href="https://github.com/opendata-education/se_Matematik"><button type="button" class="btn btn-secondary topbarbtn"
                 data-toggle="tooltip" data-placement="left" title="Source repository"><i
                     class="fab fa-github"></i>repository</button></a>
         <a class="issues-button"
-            href="https://github.com/opendata-education/Matematiikka/issues/new?title=Issue%20on%20page%20%2Fovningar/Undersok_funktion.html&body=Your%20issue%20content%20here."><button
+            href="https://github.com/opendata-education/se_Matematik/issues/new?title=Issue%20on%20page%20%2Fovningar/Undersok_funktion.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Open an issue"><i class="fas fa-lightbulb"></i>open issue</button></a>
         
@@ -200,7 +200,7 @@
         aria-label="Launch interactive content"><i class="fas fa-rocket"></i></button>
     <div class="dropdown-buttons">
         
-        <a class="binder-button" href="https://mybinder.org/v2/gh/opendata-education/Matematiikka/main?urlpath=tree/materiaali/ovningar/Undersok_funktion.ipynb"><button type="button"
+        <a class="binder-button" href="https://mybinder.org/v2/gh/opendata-education/se_Matematik/main?urlpath=tree/material/ovningar/Undersok_funktion.ipynb"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Launch Binder" data-toggle="tooltip"
                 data-placement="left"><img class="binder-button-logo"
                     src="../_static/images/logo_binder.svg"
